fixing layout issues

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -2,7 +2,6 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
   max-width: 100vw;
   margin: 0;
 }
